# HelloWorldPassPlugin

./: CMakeLists.txt  CMakePresets.json  HelloWorldPlugin.cpp  HelloWorldPlugin.h  MyLoopUtils.cpp  MyLoopUtils.h  MySCCPSolver.cpp  MySCCPSolver.h  README.md  run-on-ir.sh  run.sh  verify.sh
llvm_irs/: before-find-good.ll  before-find.ll  before-ind-var-simplify-not-optimized.ll  before-ind-var-simplify.ll  not-optimized-2.ll  not-optimized.ll  run-with-var.ll  simple-loop.ll  test.ll
